syntax = "proto3";

import "google/protobuf/empty.proto";
package boards;
option go_package = "idea-store.boards.v1;boardsv1";

service Boards{
    rpc CreateBoard(CreateBoardRequest) returns (CreateBoardResponse);
    rpc GetBoard(GetBoardRequest) returns (GetBoardResponse);
    rpc GetAllBoards(GetAllBoardsRequest) returns (GetAllBoardsResponse);
    rpc SetIdeaSaved(SetIdeaSavedRequest) returns (google.protobuf.Empty) {}
    rpc GetIdeasInBoard(GetIdeasInBoardRequest) returns (GetIdeasInBoardResponse);
    rpc DeleteBoard(DeleteBoardRequest) returns (google.protobuf.Empty) {}
}
message DeleteBoardRequest{
    int64 user_id = 1;
    int64 board_id = 2;
}
message GetIdeasInBoardRequest{
    int64 board_id = 1;
}
message GetIdeasInBoardResponse{
    repeated IdeaData ideas = 1;
}

message GetAllBoardsRequest{
    int64 user_id = 1;
}
message SetIdeaSavedRequest{
    int64 idea_id = 1;
    int64 board_id = 2;
    bool saved = 3;
}

message CreateBoardRequest{
    string name = 1;
    int64 user_id = 2;
}
message CreateBoardResponse{
    int64 id = 1;
}
message GetBoardRequest{
    int64 id = 1;
}
message GetBoardResponse{
    int64 id = 1;
    string name = 2;
    repeated int64 ideas_ids = 3;
}
message BoardData{
    int64 id = 1;
    string name = 2;
    repeated int64 ideas_ids=3;
}
message GetAllBoardsResponse{
    repeated BoardData boards = 1;
}

message IdeaData {
  int64 id = 1;
  string name = 2;
  string image = 3;
}